contrast mode fixed in modals

--- a/assets/css/modalstyle.css
+++ b/assets/css/modalstyle.css
@@ -105,6 +105,9 @@ h3 {
 .bg-255-224-233{
 	background-color: rgb(255,224,233);
 }
+.bg-255-246-252-p57{
+	background-color: rgba(255, 204, 238, 0.57);
+}
 .bg-255-92-143{
 	background-color: rgb(255,92,143);
 }
@@ -249,8 +252,8 @@ h3 {
 .max-width-19p35em{
 	max-width: 19.35em;
 }
-.max-width-22em{
-	max-width: 22em;
+.max-width-32em{
+	max-width: 32em;
 }
 .max-width-50em{
 	max-width: 50em;
@@ -360,7 +363,12 @@ h3 {
 .z2{
 	z-index: 2;
 }
-
+.z3{
+	z-index: 3;
+}
+.z4{
+	z-index: 4;
+}
 /*
 	RESPONSIVE CSS
 */
